Remove stray line while dragging tab between windows

--- a/Mod/sources/tab-bar.css
+++ b/Mod/sources/tab-bar.css
@@ -5,7 +5,7 @@
   border-bottom-color: var(--GXborderColor);
 }
 
-#tabs-container .tab.active {
+#tabs-container .tab.active:not(.tab-mini) {
   border-width: 1px 1px 0px 1px;
   border-color: var(--GXborderColor);
   border-bottom-color: transparent;
