Update icon colors for Vivaldi v6.0

--- a/Mod/sources/global.css
+++ b/Mod/sources/global.css
@@ -114,11 +114,11 @@
 }
 
 .button-toolbar > button {
-  fill: var(--GXbuttonFill);
+  color: var(--GXbuttonFill);
 }
 
 .mainbar .button-toolbar > button {
-  fill: var(--GXaddressBarButtonFill);
+  color: var(--GXaddressBarButtonFill);
 }
 
 /* Style startpage search box dropdown like address bar dropdown */
