Fix incorrect selector for border under workspace button

--- a/Mod/sources/tab-bar.css
+++ b/Mod/sources/tab-bar.css
@@ -625,7 +625,7 @@ svg.svg-tab-stack {
 .tabbar-workspace-button {
   border-bottom: 1px solid var(--GXborderColor);
 }
-.button-toolbar.workspace-popup.tabbar-workspace-button {
+.button-toolbar.workspace-popup.tabbar-workspace-button button {
   height: 29px;
 }
 
