Remove line under address bar

--- a/Mod/sources/address-bar.css
+++ b/Mod/sources/address-bar.css
@@ -677,3 +677,8 @@ progress.pageload-indicator {
 .UrlBar-AddressField .BookmarkButton {
   border-radius: 0px !important;
 }
+
+/* Remove border under address bar */
+.address-top .mainbar > .toolbar-mainbar {
+  border-bottom: unset;
+}
