Remove status bar border that covered gradient

--- a/Mod/sources/status-bar.css
+++ b/Mod/sources/status-bar.css
@@ -64,3 +64,8 @@ button.ClockPopup-Preset:hover + button.ClockPopup-Preset-Clear {
 .toolbar-statusbar .page-zoom-controls button:disabled > .button-title {
   color: var(--GXbuttonFill) !important;
 }
+
+/* Fix status bar gradient being covered */
+footer::after {
+  content: unset !important;
+}
