--- a/Mod/modSettings.css
+++ b/Mod/modSettings.css
@@ -12,7 +12,7 @@ Removing one of those will remove every mod stylezation in that compoment*/
 @import "sources/bookmarks-bar.css";
 @import "sources/tab-bar.css";
 @import "sources/status-bar.css";
-@import "sources/sidebar.css";
+@import "sources/panel-bar.css";
 @import "sources/speed-dial.css";
 @import "sources/quick_commands.css";
 @import "sources/modals.css";
