Cut the corners of non-folder dials as well

--- a/Mod/sources/speed-dial.css
+++ b/Mod/sources/speed-dial.css
@@ -33,8 +33,8 @@
   box-shadow: unset;
 }
 
-/* Cut folder corners */
-.dials.speeddial div.dial.folder {
+/* Cut dial corners */
+.dials.speeddial div.dial {
   --modClipPath1: 12%;
   --modClipPath2: 88%;
   clip-path: polygon(var(--modClipPath1) 0, 100% 0, 100% var(--modClipPath2), var(--modClipPath2) 100%, 0 100%, 0 var(--modClipPath1));
@@ -43,11 +43,11 @@
 .dials.speeddial div.dial.folder .Mini-Thumbnail:first-of-type {
   clip-path: polygon(22.3% 0, 100% 0, 100% 100%, 0 100%, 0 28%);
 }
-.dials.speeddial div.dial.folder .thumbnail-title {
+.dials.speeddial div.dial .thumbnail-title {
   clip-path: polygon(0 0, 100% 0, 100% 0%, 79% 100%, 0 100%);
 }
 /* Prevent title from going into cut area */
-.dials.speeddial div.dial.folder .thumbnail-title button {
+.dials.speeddial div.dial .thumbnail-title button {
   padding-right: 14px;
 }
 /* Fill top left corner for focus indicator */
@@ -61,7 +61,7 @@
   pointer-events: none;
 }
 /* Folder needs border for bottom right cut corner */
-.dials.speeddial .dial.folder:focus::before {
+.dials.speeddial .dial:focus::before {
   background-image: linear-gradient(135deg, var(--colorHighlightBg) 9.6%, transparent 0, transparent 93.5%, var(--colorHighlightBg) 0);
 }
 .dials .dial .button-title {
